More work on header margins

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
           <div class="version-info">DEV x.y.z</div>
         </div>
       </div>
-      <div class="condense menu-group">
+      <div class="menu-group">
         <div class="menu-group-left">
           <ul class="menu-bar">
             <li><a ui-sref="calculator">Calculator</a></li>
