Further improvements on header styling

--- a/client/index.html
+++ b/client/index.html
@@ -24,15 +24,14 @@
       <div class="menu-group">
         <div class="menu-group-left">
           <ul class="menu-bar">
-            <li><a ui-sref="calculator">Calculator</a></li>
-            <li><a ui-sref="quotes">Quotes</a></li>
-            <li><a ui-sref="orders">Orders</a></li>
+            <li ui-sref-active="is-active"><a ui-sref="calculator">Calculator</a></li>
+            <li ui-sref-active="is-active"><a ui-sref="quotes">Quotes</a></li>
+            <li ui-sref-active="is-active"><a ui-sref="orders">Orders</a></li>
           </ul>
         </div>
         <div class="menu-group-right">
           <ul class="menu-bar">
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contact</a></li>
+            <li ui-sref-active="is-active"><a ui-sref="admin">Administration</a></li>
           </ul>
         </div>
       </div>
