--- a/client/index.html
+++ b/client/index.html
@@ -11,17 +11,17 @@
     <script src="./assets/js/app.js"></script>
   </head>
   <body>
-    <div class="vertical grid-block canvas">
       <div class="location-container">
         <ul class="location">
-          <li>Switzerland</li>
+          <li><a href="#">Switzerland</a></li>
         </ul>
       </div>
+    <div class="vertical grid-block canvas">
       <div class="vertical medium-horizontal grid-block title">
-        <div class="grid-block shrink">
+        <div class="grid-content shrink">
           <img class="title-logo" alt="UBS" src="assets/img/ubs_regular_rgb_26.svg"/>
         </div>
-        <div class="vertical grid-block title-text">
+        <div class="vertical grid-content shrink title-text">
           <h3>Structured Product Investor</h3>
           <div class="version-info">DEV x.y.z</div>
         </div>
