More adjustments to topbar

--- a/client/index.html
+++ b/client/index.html
@@ -11,19 +11,19 @@
     <script src="./assets/js/app.js"></script>
   </head>
   <body>
-      <div class="location-container">
-        <ul class="location">
-          <li><a href="#">Switzerland</a></li>
-        </ul>
-      </div>
     <div class="vertical grid-block canvas">
+      <div class="topbar-container">
+        <div class="topbar-item"><a href="#">Switzerland</a></div>
+        <div class="topbar-item"><a href="#">News</a></div>
+        <div class="topbar-item"><a href="#">Contact</a></div>
+      </div>
       <div class="vertical medium-horizontal grid-block title">
         <div class="grid-content shrink">
           <img class="title-logo" alt="UBS" src="assets/img/ubs_regular_rgb_26.svg"/>
         </div>
-        <div class="vertical grid-content shrink title-text">
+        <div class="vertical grid-content title-text">
           <h3>Structured Product Investor</h3>
-          <div class="version-info">DEV x.y.z</div>
+          <!-- <div class="version-info">DEV x.y.z</div> -->
         </div>
       </div>
       <div class="menu-group">
